# hired-or-fired-ai-review

./: .gitignore  AGENTS.md  Hired_or_Fired_MVP_仕様書.md  README.md  TASK.md  next.config.mjs  package-lock.json  package.json  vitest.config.ts
.github/: SECURITY.md
.github/workflows/: aios-ci.yml  sdk-publish.yml
aios/: .gitignore  Makefile  README.md  pyproject.toml
aios/apps/api/: Dockerfile  pyproject.toml
aios/apps/api/src/aios_api/: auth.py  autopilot.py  cycle_service.py  logging_config.py  main.py  netguard.py  notify.py  oidc.py  ratelimit.py  rbac.py  security.py  store.py  telemetry.py
aios/apps/api/src/aios_api/routers/: admin.py  approvals.py  cohorts.py  health.py  lineage.py  metrics.py  proposals.py  safety.py  scaling.py  tasks.py  training.py
aios/apps/api/tests/: test_api_persistence.py  test_approvals_usage_api.py  test_auth_tenant_api.py  test_autopilot.py  test_governance_api.py  test_live_demo_api.py  test_logging.py  test_oidc_rbac.py  test_ratelimit_ssrf.py  test_safety_api.py  test_scaling_export_api.py  test_security_headers.py  test_telemetry.py  test_training_api.py  test_webhooks.py
aios/apps/api/tests/contract/: test_claims_contract.py
aios/apps/dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json
aios/apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
aios/apps/dashboard/src/app/cohorts/[id]/: page.tsx
aios/apps/dashboard/src/components/: DissipationMeter.tsx  SlotTiles.tsx  TrainingPanel.tsx  TrendChart.tsx
aios/apps/dashboard/src/lib/: api.ts
aios/apps/orchestrator/: pyproject.toml
aios/apps/orchestrator/src/aios_orchestrator/: __init__.py  cycle.py  persistence.py  runtime.py  scaling.py  scheduler.py  training.py
aios/apps/orchestrator/tests/: test_archive_e2e.py  test_archive_persistence.py  test_lifecycle_e2e.py  test_persistence_e2e.py  test_safety_e2e.py  test_scaling.py  test_scheduler.py  test_training_coordinator.py
aios/docs/: 00_product_overview.md  01_functional_requirements.md  02_nonfunctional_requirements.md  03_architecture.md  04_data_model.md  05_api_specification.md  06_algorithm_design.md  07_implementation_plan.md  08_project_structure.md  09_security.md
aios/docs/adr/: ADR-001-event-sourcing.md  ADR-002-pure-domain-core.md
aios/docs/security/: pentest_scope.md
aios/infra/: docker-compose.yml
aios/infra/helm/aios/: Chart.yaml  values.yaml
aios/infra/helm/aios/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  dashboard-deployment.yaml  ingress.yaml  migrate-job.yaml  secret.yaml  serviceaccount.yaml
aios/loadtest/: README.md  benchmark.py  locustfile.py
app/: globals.css  layout.tsx  page.tsx
app/learn/python/: page.tsx
app/play/[challengeId]/: page.tsx
app/problems/: page.tsx
components/: ChallengeCard.tsx  CodeViewer.tsx  PlayClient.tsx  ProblemsClient.tsx  ResultClient.tsx  ResultIllustration.tsx  SmartStartButton.tsx  SoundToggle.tsx
data/: challenges.ts  generatedChallenges.ts
docs/: 404.html  index.html  index.txt
docs/404/: index.html
docs/learn/python/: index.html  index.txt
docs/play/async-gather-return-review/: index.html  index.txt
docs/play/audit-log-pii-mask-review/: index.html  index.txt
docs/play/billing-alias-copy-review/: index.html  index.txt
docs/play/billing-auth-after-cache-review/: index.html  index.txt
docs/play/billing-break-continue-review/: index.html  index.txt
docs/play/billing-broad-exception-review/: index.html  index.txt
docs/play/billing-case-sensitive-role-review/: index.html  index.txt
docs/play/billing-count-vs-quantity-review/: index.html  index.txt
docs/play/billing-date-boundary-review/: index.html  index.txt
docs/play/billing-dedupe-order-review/: index.html  index.txt
docs/play/billing-exception-success-review/: index.html  index.txt
docs/play/billing-filter-reversed-review/: index.html  index.txt
docs/play/billing-generator-reuse-review/: index.html  index.txt
docs/play/billing-inclusive-threshold-review/: index.html  index.txt
docs/play/billing-integer-division-review/: index.html  index.txt
docs/play/billing-matrix-alias-review/: index.html  index.txt
docs/play/billing-membership-substring-review/: index.html  index.txt
docs/play/billing-min-max-review/: index.html  index.txt
docs/play/billing-missing-await-review/: index.html  index.txt
docs/play/billing-missing-none-validation-review/: index.html  index.txt
docs/play/billing-mutable-default-review/: index.html  index.txt
docs/problems/: index.html  index.txt
docs/result/: index.html  index.txt
lib/: challengeSelection.ts  gameEngine.ts  scoring.ts  sound.ts  storage.ts  types.ts
tests/: challengeSelection.test.ts  challenges.test.ts  gameEngine.test.ts  scoring.test.ts  storage.test.ts
(+301 files in other folders)
