[project]
name = "aios-api"
version = "0.1.0"
description = "AIOS control-plane API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=1.26",
    "pyjwt[crypto]>=2.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "aios-core",
    "aios-common",
    "aios-adapters",
    "aios-orchestrator",
]

[tool.uv.sources]
aios-core = { workspace = true }
aios-common = { workspace = true }
aios-adapters = { workspace = true }
aios-orchestrator = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios_api"]
