[project]
name = "aios-orchestrator"
version = "0.1.0"
description = "AIOS control loop: phase FSM, hatchery, cycle engine"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "aios-core", "aios-common", "aios-adapters"]

[tool.uv.sources]
aios-core = { workspace = true }
aios-common = { workspace = true }
aios-adapters = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios_orchestrator"]
